unpackaged/main/default/objects/Lead/fields/TRN_Number__c.field-meta.xml
<CustomField>
    <fullName>TRN_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TRN Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>