unpackaged/main/default/objects/Lead/fields/Type_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Customer__c</fullName>
    <label>Type of Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Booked Appointment</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>