unpackaged/main/default/objects/Lead/fields/Type_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Services__c</fullName>
    <label>Type of Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accident Repair</fullName>
            </value>
            <value>
                <fullName>Service Contract</fullName>
            </value>
            <value>
                <fullName>Service on Demand</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>