unpackaged/main/default/objects/Lead/fields/Type_of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Vehicle__c</fullName>
    <label>Type of Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salvaged</fullName>
            </value>
            <value>
                <fullName>Run and Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>