unpackaged/main/default/objects/Lead/fields/Vehicle_Brand__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Brand</label>
    <referenceTo>Vehicle_Brand_Master__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>