unpackaged/main/default/objects/Lead/fields/Vehicle_Brand_Pick__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Brand_Pick__c</fullName>
    <label>Vehicle Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Brand_Master</valueSetName>
    </valueSet>
</CustomField>