unpackaged/main/default/objects/Lead/fields/Vehicle_Chassis__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Chassis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Chassis No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>