unpackaged/main/default/objects/Lead/fields/Vehicle_Internal_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Internal_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Internal Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>