unpackaged/main/default/objects/Lead/fields/Vehicle_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Mileage__c</fullName>
    <label>Vehicle Mileage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10000</fullName>
            </value>
            <value>
                <fullName>20000</fullName>
            </value>
            <value>
                <fullName>30000</fullName>
            </value>
            <value>
                <fullName>40000</fullName>
            </value>
            <value>
                <fullName>50000</fullName>
            </value>
            <value>
                <fullName>60000</fullName>
            </value>
            <value>
                <fullName>70000</fullName>
            </value>
            <value>
                <fullName>80000</fullName>
            </value>
            <value>
                <fullName>90000</fullName>
            </value>
            <value>
                <fullName>100000</fullName>
            </value>
            <value>
                <fullName>110000</fullName>
            </value>
            <value>
                <fullName>120000</fullName>
            </value>
            <value>
                <fullName>130000</fullName>
            </value>
            <value>
                <fullName>140000</fullName>
            </value>
            <value>
                <fullName>150000</fullName>
            </value>
            <value>
                <fullName>160000</fullName>
            </value>
            <value>
                <fullName>160000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>