unpackaged/main/default/objects/Lead/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle Model - To be deleted</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vehicle__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>DB11</fullName>
            </value>
            <value>
                <fullName>DB9</fullName>
            </value>
            <value>
                <fullName>DBS</fullName>
            </value>
            <value>
                <fullName>Rapide</fullName>
            </value>
            <value>
                <fullName>Vanquish</fullName>
            </value>
            <value>
                <fullName>Vantage</fullName>
            </value>
            <value>
                <fullName>8C</fullName>
            </value>
            <value>
                <fullName>156/159</fullName>
            </value>
            <value>
                <fullName>Giulia</fullName>
            </value>
            <value>
                <fullName>Giulietta</fullName>
            </value>
            <value>
                <fullName>Spider</fullName>
            </value>
            <value>
                <fullName>Stelvio</fullName>
            </value>
            <value>
                <fullName>SZ</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>A7</fullName>
            </value>
            <value>
                <fullName>A8</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q5</fullName>
            </value>
            <value>
                <fullName>Q7</fullName>
            </value>
            <value>
                <fullName>Q8</fullName>
            </value>
            <value>
                <fullName>R8</fullName>
            </value>
            <value>
                <fullName>S3/RS3</fullName>
            </value>
            <value>
                <fullName>S4/RS4</fullName>
            </value>
            <value>
                <fullName>S5/RS5</fullName>
            </value>
            <value>
                <fullName>S6/RS6</fullName>
            </value>
            <value>
                <fullName>S7/RS7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>