unpackaged/main/default/objects/Lead/fields/Vehicle_Model_Pick__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model_Pick__c</fullName>
    <label>Vehicle Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Vehicle_Brand_Pick__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Model_Master</valueSetName>
    </valueSet>
</CustomField>