unpackaged/main/default/objects/Lead/fields/Vehicle_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Plate_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Plate Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>