unpackaged/main/default/objects/Lead/fields/Vehicle_Sales_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Sales_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Sales Inventory</label>
    <referenceTo>ETM_Sales_Vehicle_Inventory__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>