unpackaged/main/default/objects/Lead/fields/Vehicle_type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_type__c</fullName>
    <description>used in ET Moto</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>