unpackaged/main/default/objects/Lead/fields/Workshop_Location__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workshop Location</label>
    <referenceTo>CICO_Workshop_Location__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>