unpackaged/main/default/objects/Lead/validationRules/Cannot_Insert_Negative_Values1.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Insert_Negative_Values1</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND( 
$RecordType.Name = &quot;Maintainance&quot;,
ETSALES_Number_of_Cordinator__c &lt; 0
),
AND(
OR(
$RecordType.Name = &quot;Transportation&quot;,
$RecordType.Name = &quot;Manpower&quot;
),
OR(

)))</errorConditionFormula>
    <errorMessage>Cannot Insert Negative Value to Number of Drivers, Number of Nannies, Number of Coordinators, Number Of Supervisors, Number Of Accountants Or Cashiers, No Of Other Staffs.</errorMessage>
</ValidationRule>