unpackaged/main/default/objects/Lead/validationRules/Closed_Lead_Cannot_be_Converted.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lead_Cannot_be_Converted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Status, &#39;Closed&#39;),
 IsConverted
)</errorConditionFormula>
    <errorMessage>Closed Leads Can be Converted</errorMessage>
</ValidationRule>