unpackaged/main/default/objects/Lead/validationRules/Company_Name_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Name_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(ETSALES_Customer_Type__c,&#39;Organization&#39;),
(ISBLANK( Company )))</errorConditionFormula>
    <errorMessage>Company Name is required for &#39;Organization&#39; Customer type.</errorMessage>
</ValidationRule>