unpackaged/main/default/objects/Lead/validationRules/Contact_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( ETSALES_Contact_Phone__c ,&quot;^(\\s?\\d{2}\\s?\\d{3}\\d{3})?$&quot;))</errorConditionFormula>
    <errorDisplayField>ETSALES_Contact_Phone__c</errorDisplayField>
    <errorMessage>Contact Phone Number Should be 8 Digits only and Should not Contain Alphanumeric or Any Special characters.</errorMessage>
</ValidationRule>