unpackaged/main/default/objects/Lead/validationRules/ET_Restrict_Lead_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>ET_Restrict_Lead_Conversion</fullName>
    <active>true</active>
    <description>The lead can not be converted without approval.</description>
    <errorConditionFormula>AND( (ISPICKVAL( ETSALES_Customer_Type__c, &#39;Organization&#39; ))
&amp;&amp; ((RecordType.Name = &#39;Automotive Dealership&#39; ) 
|| (RecordType.Name = &#39;Chauffeur and Limousine - B2B&#39; )
|| (RecordType.Name = &#39;ET Tyre&#39; )
|| (RecordType.Name = &#39;Inspection - B2B&#39; )
|| (RecordType.Name = &#39;Leasing&#39; )
|| (RecordType.Name = &#39;Logistics&#39; )
|| (RecordType.Name = &#39;Luxury Vehicles Maintenance unit&#39; )
|| (RecordType.Name = &#39;Maintainance&#39; )
|| (RecordType.Name = &#39;Manpower&#39; )
|| (RecordType.Name = &#39;New Business&#39; )
|| (RecordType.Name = &#39;Driving School - B2B&#39; )
|| (RecordType.Name = &#39;Rental -B2B&#39; )
|| (RecordType.Name = &#39;Transportation&#39; )
|| (RecordType.Name = &#39;Tyre - Cash Supplier&#39; )
|| (RecordType.Name = &#39;Tyre - Credit/B2B Supplier&#39; )
|| (RecordType.Name = &#39;Tyre - Refurbishing Services&#39; )
|| (RecordType.Name = &#39;Tyre Cash Individual&#39; )
|| (RecordType.Name = &#39;Driving School - B2B&#39; )
),
	NOT(ISPICKVAL( ETT_Lead_Approval_Status__c  , &#39;Approve&#39;)), IsConverted
)</errorConditionFormula>
    <errorMessage>Please take the prior approval to convert this lead.</errorMessage>
</ValidationRule>