unpackaged/main/default/objects/Lead/validationRules/ETSALES_Exchange_Model_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETSALES_Exchange_Model_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ETM_Exchange__c  = TRUE, isBLANK(ETM_Exchange_Model__c)
)</errorConditionFormula>
    <errorDisplayField>ETM_Exchange_Model__c</errorDisplayField>
    <errorMessage>Please Provide Exchange Model Information</errorMessage>
</ValidationRule>