unpackaged/main/default/objects/Lead/validationRules/ETSALES_Lead_Create_Status_New_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>ETSALES_Lead_Create_Status_New_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW(),NOT(ISPICKVAL(Status, &#39;New&#39;)))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Status must be &#39;New&#39; while creating the Lead.</errorMessage>
</ValidationRule>