unpackaged/main/default/objects/Lead/validationRules/ETSALES_Negative_Value_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETSALES_Negative_Value_Validation</fullName>
    <active>false</active>
    <description>to avoid the negative value addition in fields</description>
    <errorConditionFormula>NumberOfEmployees &lt;0  ||  ETSALES_No_of_Vehicle__c &lt;0</errorConditionFormula>
    <errorMessage>Please check NumberOfEmployees and No of Vehicle value should not be negative</errorMessage>
</ValidationRule>