unpackaged/main/default/objects/Lead/validationRules/ETT_Approver_Validation_on_profile.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Approver_Validation_on_profile</fullName>
    <active>false</active>
    <description>Only HOO or Factory Manager are the approvers / Rejectors to take the record further.</description>
    <errorConditionFormula>AND(ISCHANGED(Status), $Setup.ETT_Validation_Setting__c.ETT_Approver_Validation__c )</errorConditionFormula>
    <errorMessage>Only the assigned approver is allowed to approve the record. You don&#39;t have sufficient privileges.</errorMessage>
</ValidationRule>