unpackaged/main/default/objects/Lead/validationRules/ETT_EmiratesID_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_EmiratesID_Validation</fullName>
    <active>true</active>
    <description>This is created to validate proper phone number</description>
    <errorConditionFormula>AND(
NOT(REGEX(ETT_Emirates_Id__c ,&quot;([784-]{4}[0-9-]{5}[0-9-]{8}[0-9]{1})&quot;)),
OR(
   $RecordType.Name = &quot;Tyre Cash Individual&quot;
))</errorConditionFormula>
    <errorMessage>The Emirates should be in this format (784-XXXX-XXXXXXX-X)</errorMessage>
</ValidationRule>