unpackaged/main/default/objects/Lead/validationRules/ETT_Fax_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Fax_Validation</fullName>
    <active>true</active>
    <description>Defining the fax format.</description>
    <errorConditionFormula>IF(NOT(ISBLANK(Fax)),
AND(
OR(ISCHANGED(Fax), 
   NOT(REGEX(Fax, &quot;(\\D?[+]\\D?[9]\\D?[7]\\D?[1])[\\s][0-9]{8}&quot;))),
OR
($RecordType.Name = &quot;Tyre - Cash Supplier&quot;,
$RecordType.Name = &quot;Tyre - Credit/B2B Supplier&quot;,
$RecordType.Name = &quot;Tyre - Refurbishing Services&quot;,
$RecordType.Name = &quot;Tyre Cash Individual&quot;
)),FALSE)</errorConditionFormula>
    <errorMessage>Fax numbers should be in this format (+971 XXXXXXXXX)</errorMessage>
</ValidationRule>