unpackaged/main/default/objects/Lead/validationRules/ETT_Lead_Recall_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Lead_Recall_Process</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
  OR(ISPICKVAL(Status, &quot;Recall&quot;)),
      ISBLANK(ETT_Re_Submit_Reasons__c),
OR(
$RecordType.Name = &quot;Tyre - Cash Supplier&quot;,
$RecordType.Name = &quot;Tyre - Credit/B2B Supplier&quot;,
$RecordType.Name = &quot;Tyre - Refurbishing Services&quot;,
$RecordType.Name = &quot;Tyre Cash Individual&quot;
))</errorConditionFormula>
    <errorMessage>Please enter the Re-Call Reasons.</errorMessage>
</ValidationRule>