unpackaged/main/default/objects/Lead/validationRules/ETT_LN_COC_Date_Is_Requried.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_LN_COC_Date_Is_Requried</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR (NOT(ISBLANK(ETT_Trade_License_Number__c))),
ISBLANK(ETT_Trade_Licenses_Expiry_Date__c),
OR(
$RecordType.Name = &quot;Tyre - Cash Supplier&quot;,
$RecordType.Name = &quot;Tyre - Credit/B2B Supplier&quot;,
$RecordType.Name = &quot;Tyre - Refurbishing Services&quot;,
$RecordType.Name = &quot;Tyre Cash Individual&quot;
))</errorConditionFormula>
    <errorMessage>Please enter the Trade License Number expiry date.</errorMessage>
</ValidationRule>