unpackaged/main/default/objects/Lead/validationRules/ETT_Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Mobile_Validation</fullName>
    <active>true</active>
    <description>This is created to validate proper phone number</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL( LeadSource ,&#39;Website&#39;)),NOT(REGEX(MobilePhone,&quot;^(\\s?\\d{2}\\s?\\d{3}\\d{4})?$&quot;)), NOT(
OR($RecordType.Name = &quot;Tyre - Cash Supplier&quot;,
$RecordType.Name = &quot;Tyre - Credit/B2B Supplier&quot;,
$RecordType.Name = &quot;Tyre - Refurbishing Services&quot;,
$RecordType.Name = &quot;Tyre Cash Individual&quot;,
RecordType.DeveloperName ==&#39;New_Business&#39;,
RecordType.DeveloperName ==&#39;ET Tyre&#39;,
RecordType.DeveloperName ==&#39;Moto_Dealership_Vehicle_Inquiry_Trade_In&#39;,
RecordType.DeveloperName ==&#39;Moto_Dealership_Vehicle_Purchase&#39;,
RecordType.DeveloperName ==&#39;Moto_Service_Center_Body_Shop&#39;
)
))</errorConditionFormula>
    <errorMessage>Mobile numbers should be in this format (+971 XXXXXXXXX)</errorMessage>
</ValidationRule>