unpackaged/main/default/objects/Lead/validationRules/ETT_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Phone_Validation</fullName>
    <active>true</active>
    <description>This is created to validate proper phone number</description>
    <errorConditionFormula>IF(NOT(ISBLANK(Phone)),
AND(
NOT(REGEX(Phone, &quot;(\\D?[+]\\D?[9]\\D?[7]\\D?[1])[\\s][0-9]{8,9}&quot;)),
OR($RecordType.Name = &quot;Tyre - Cash Supplier&quot;,
$RecordType.Name = &quot;Tyre - Credit/B2B Supplier&quot;,
$RecordType.Name = &quot;Tyre - Refurbishing Services&quot;,
$RecordType.Name = &quot;Tyre Cash Individual&quot;
)), FALSE)</errorConditionFormula>
    <errorDisplayField>ETT_Account_Number__c</errorDisplayField>
    <errorMessage>Phone numbers should be in this format (+971 XXXXXXXX)</errorMessage>
</ValidationRule>