unpackaged/main/default/objects/Lead/validationRules/ETT_TradeLicense_COC_TRN.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_TradeLicense_COC_TRN</fullName>
    <active>true</active>
    <description>IF any alpha charterers are enter validation should through</description>
    <errorConditionFormula>AND(
OR(ISCHANGED(ETT_VAT_TRN__c),
   ISCHANGED(ETT_Trade_License_Number__c),
   ISCHANGED(ETT_Chamber_of_Commerce_Certification_No__c)),
OR(NOT(ISNUMBER(ETT_VAT_TRN__c)),
   NOT(ISNUMBER(ETT_Trade_License_Number__c)),
   NOT(ISNUMBER(ETT_Chamber_of_Commerce_Certification_No__c))),  
OR(LEN(ETT_VAT_TRN__c) &lt;&gt; 15,
   LEN(ETT_Trade_License_Number__c) &lt;&gt; 15
),			
OR(
$RecordType.Name = &quot;Tyre - Cash Supplier&quot;,
$RecordType.Name = &quot;Tyre - Credit/B2B Supplier&quot;,
$RecordType.Name = &quot;Tyre - Refurbishing Services&quot;,
$RecordType.Name = &quot;Tyre Cash Individual&quot;
))</errorConditionFormula>
    <errorMessage>Please enter valid Trade License Number, 
Chamber of commerce, and
TRN fields.</errorMessage>
</ValidationRule>