unpackaged/main/default/objects/Lead/validationRules/ETT_TradeLicenses_COC.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_TradeLicenses_COC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
NOT(ISNULL(ETT_Chamber_of_Comm_Cert_Expiry_Date__c)), 
NOT(ISNULL(ETT_Trade_Licenses_Expiry_Date__c))),
OR(
ETT_Chamber_of_Comm_Cert_Expiry_Date__c &lt; TODAY() + 7,
ETT_Trade_Licenses_Expiry_Date__c &lt; TODAY() + 7),
OR(
$RecordType.Name = &quot;Tyre - Cash Supplier&quot;,
$RecordType.Name = &quot;Tyre - Credit/B2B Supplier&quot;,
$RecordType.Name = &quot;Tyre - Refurbishing Services&quot;,
$RecordType.Name = &quot;Tyre Cash Individual&quot;
))</errorConditionFormula>
    <errorMessage>Both the Trade License Number and Chamber of Commerce number expiry dates should be greater than 7days from today. If not please renew your licenses.</errorMessage>
</ValidationRule>