unpackaged/main/default/objects/Lead/validationRules/ETT_TRN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_TRN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(ETT_VAT_TRN__c)&amp;&amp; $RecordType.Name = &quot;Tyre - Refurbishing Services&quot;</errorConditionFormula>
    <errorDisplayField>ETT_VAT_TRN__c</errorDisplayField>
    <errorMessage>TRN is required</errorMessage>
</ValidationRule>