unpackaged/main/default/objects/Lead/validationRules/First_Name_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(FirstName),OR($RecordType.Name = &quot;Luxury Vehicles Maintenance unit&quot;,
$RecordType.Name = &quot;Automotive Dealership&quot;
))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is Mandatory to create the lead</errorMessage>
</ValidationRule>