unpackaged/main/default/objects/Lead/validationRules/Mandatory_field_for_lead_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_field_for_lead_creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(TEXT(Contract_Years__c)), 
ISBLANK(TEXT(Contract_Months__c)), 
ISBLANK(TEXT(Contract_Weeks__c)), 
ISBLANK(TEXT(Contract_Days__c))
)

&amp;&amp;
OR(
$RecordType.Name = &quot;Leasing&quot;,
$RecordType.Name = &quot;Rental -B2B&quot;,
$RecordType.Name = &quot;Transportation&quot;,
$RecordType.Name = &quot;Logistics&quot;,
$RecordType.Name = &quot;Maintainance&quot;,
$RecordType.Name = &quot;Chauffeur and Limousine -B2B&quot;
)</errorConditionFormula>
    <errorMessage>Please enter the Contract Year or Contract  Month or  Contract  Day..</errorMessage>
</ValidationRule>